--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-slick": "^0.30.3",
-    "swiper": "^11.2.0"
+    "react-slick": "^0.30.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -31,6 +30,7 @@
     "framer-motion": "^11.16.0",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "swiper": "^11.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
